[gd_scene load_steps=3 format=3 uid="uid://wave_announcement_scene"]

[ext_resource type="Script" path="res://UI/WaveAnnouncement/wave_announcement.gd" id="1_script"]

[sub_resource type="LabelSettings" id="LabelSettings_wave"]
font_size = 72
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="WaveAnnouncement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WaveLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Wave 1"
label_settings = SubResource("LabelSettings_wave")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The Beginning"
horizontal_alignment = 1
vertical_alignment = 1
